<resources>
    <string name="app_name">Ase3</string>
    <!-- main_activity, pantalla Inicio/-->
    <string name="iniciaSesion">Iniciar Sesión</string>
    <string name="usuario">Ingresar Usuario</string>
    <string name="contrasenia">Ingresar Contrasenia</string>
    <!-- menu, opciones del menu /-->
    <string name="crear">Crear Materia</string>
    <string name="ver">Tira de Materias y Calificaciones</string>
    <string name="modificar">Modificar Información</string>
    <string name="creadores">Creadores</string>
    <string name="contactos">Contactos</string>

</resources>